--- a/ansible/Ansiblefile.yml
+++ b/ansible/Ansiblefile.yml
@@ -8,4 +8,4 @@
       file: dest=/home/test_ohwaki/.ssh/ state=directory owner=test_ohwaki group=test_ohwaki mode=700
 
     - name: add authorized keys #.ssh以下にauthorized_keysファイルの作成
-      copy: src=/home/ec2-user/.ssh/authorized_keys dest=/home/test_ohwaki/.ssh/authorized_keys owner=test_ohwaki group=test_ohwaki mode=600
+      copy: src=~/.ssh/authorized_keys dest=/home/test_ohwaki/.ssh/authorized_keys owner=test_ohwaki group=test_ohwaki mode=600
