--- a/ansible/Ansiblefile.yml
+++ b/ansible/Ansiblefile.yml
@@ -1,5 +1,5 @@
 - hosts: web
-  become: true
+  sudo: true
   tasks:
     - name: add a new user      #Linuxユーザの作成
       user: name=test_ohwaki state=present group=wheel
