--- a/ansible/Ansiblefile.yml
+++ b/ansible/Ansiblefile.yml
@@ -11,4 +11,4 @@
       file: dest=/home/test_ohwaki/.ssh/ state=directory owner=test_ohwaki group=test_ohwaki mode=700
 
     - name: add authorized keys #.ssh以下にauthorized_keysファイルの作成
-      copy: src=~/.ssh/authorized_keys dest=/home/test_ohwaki/.ssh/authorized_keys owner=test_ohwaki group=test_ohwaki mode=600
+      copy: src=~/.ssh dest=/home/test_ohwaki/.ssh owner=test_ohwaki group=test_ohwaki mode=600
