--- a/ansible/Ansiblefile.yml
+++ b/ansible/Ansiblefile.yml
@@ -4,7 +4,7 @@
     - name: add a new user      #Linuxユーザのパスワード生成
       user:
         name: test_ohwaki2
-        password: {{ bzuh6sdgjhd | password_hash('sha512') }}
+        password: "{{ bzuh6sdgjhd | password_hash('sha512') }}"
         state: present
         home: /home/test_ohwaki2
 
