--- a/ansible/Ansiblefile.yml
+++ b/ansible/Ansiblefile.yml
@@ -21,4 +21,4 @@
       shell: sudo chmod -R go-rwx ~test_ohwaki2/.ssh
 
     - name: add authorized keys #port を変更
-      shell: sudo sed -ri 's/#Port/Port 40012/g' /etc/ssh/sshd_config
+      shell: sudo sed -ri 's/#Port 22/Port 40012/g' /etc/ssh/sshd_config
